Add additional resources
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-the-web-console.adoc
@@ -45,3 +45,8 @@ rules:
   resources: ["infrastructures", "authentications"]
   verbs: ["get", "list", "watch"]
 ----
+
+.Additional resources
+
+* https://docs.openshift.com/container-platform/latest/cli_reference/openshift_cli/developer-cli-commands.html#oc-apply[`oc apply` command]
+* link:https://docs.openshift.com/container-platform/4.17/cli_reference/openshift_cli/administrator-cli-commands.html#oc-adm-policy-add-cluster-role-to-user[`oc adm policy` command]
