--- a/modules/administration-guide/pages/permissions-to-install-che.adoc
+++ b/modules/administration-guide/pages/permissions-to-install-che.adoc
@@ -7,7 +7,7 @@
 [id="permissions-to-install-che"]
 = Permissions to install {prod-short}
 
-This section describes the permissions required to install {prod}.
+This section describes the permissions required to install {prod} on different {kubernetes} clusters.
 
 * xref:permissions-to-install-che-on-openshift-using-cli.adoc[]
 
