--- a/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-cli.adoc
@@ -44,3 +44,8 @@ rules:
   resources: ["packagemanifests"]
   verbs: ["get", "list"]
 ----
+
+.Additional resources
+
+* https://docs.openshift.com/container-platform/latest/cli_reference/openshift_cli/developer-cli-commands.html#oc-apply[`oc apply` command]
+* link:https://docs.openshift.com/container-platform/4.17/cli_reference/openshift_cli/administrator-cli-commands.html#oc-adm-policy-add-cluster-role-to-user[`oc adm policy` command]
