--- a/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-the-web-console.adoc
@@ -6,7 +6,7 @@
 [id="permissions-to-install-che-on-openshift-using-the-web-console"]
 = Permissions to install {prod-short} on OpenShift using the web console
 
-Here you can find the minimal set of permissions required to install {prod-short} on an OpenShift cluster using the web console:
+Below is the minimal set of permissions required to install {prod-short} on an OpenShift cluster using the web console:
 
 [source,yaml,subs="+quotes,+attributes"]
 ----
