--- a/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/permissions-to-install-che-on-openshift-using-cli.adoc
@@ -6,7 +6,7 @@
 [id="permissions-to-install-che-on-openshift-using-cli"]
 = Permissions to install {prod-short} on OpenShift using CLI
 
-Here you can find the minimal set of permissions required to install {prod-short} on an OpenShift cluster using {prod-cli}:
+Below is the minimal set of permissions required to install {prod-short} on an OpenShift cluster using {prod-cli}:
 
 [source,yaml,subs="+quotes,+attributes"]
 ----
