chore: Add article about retrieving the list of default images for Image Puller
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -53,12 +53,15 @@
 *** xref:configuring-a-user-namespace.adoc[]
 *** xref:configuring-allowed-urls-for-cloud-development-environments.adoc[]
 ** xref:caching-images-for-faster-workspace-start.adoc[]
-*** xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
-*** xref:installing-image-puller-on-openshift-using-cli.adoc[]
-*** xref:installing-image-puller-on-openshift-by-using-the-web-console.adoc[]
-*** xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
-*** xref:configuring-image-puller-to-pre-pull-custom-images.adoc[]
-*** xref:configuring-image-puller-to-pre-pull-additional-images.adoc[]
+*** xref:installing-kubernetes-image-puller.adoc[]
+**** xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
+**** xref:installing-image-puller-on-openshift-using-cli.adoc[]
+**** xref:installing-image-puller-on-openshift-by-using-the-web-console.adoc[]
+*** xref:configuring-kubernetes-image-puller.adoc[]
+**** xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
+**** xref:configuring-image-puller-to-pre-pull-custom-images.adoc[]
+**** xref:configuring-image-puller-to-pre-pull-additional-images.adoc[]
+*** xref:retrieving-default-list-of-images-for-kubernetes-image-puller.adoc[]
 ** xref:configuring-observability.adoc[]
 **** xref:the-woopra-telemetry-plugin.adoc[]
 **** xref:creating-a-telemetry-plugin.adoc[]
