--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -1,4 +1,4 @@
-:_content-type: REFERENCE
+:_content-type: ASSEMBLY
 :description: Caching images for faster workspace start
 :keywords: administration-guide, caching-images-for-faster-workspace-start
 :navtitle: Caching images for faster workspace start
@@ -18,17 +18,8 @@ configured to pre-pull relevant {prod-short} workspace images on each node.
 These images would already be available when a {prod-short} workspace starts,
 therefore improving the workspace start time.
 
-* xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
-
-* xref:installing-image-puller-on-openshift-by-using-the-web-console.adoc[]
-
-* xref:installing-image-puller-on-openshift-using-cli.adoc[]
-
-* xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
-
-* xref:configuring-image-puller-to-pre-pull-custom-images.adoc[]
-
-* xref:configuring-image-puller-to-pre-pull-additional-images.adoc[]
+include::partial$snip_installing-kubernetes-image-puller.adoc[]
+include::partial$snip_configuring-kubernetes-image-puller.adoc[]
 
 .Additional resources
 
