--- a/modules/administration-guide/pages/configuring-image-puller-to-pre-pull-default-che-images.adoc
+++ b/modules/administration-guide/pages/configuring-image-puller-to-pre-pull-default-che-images.adoc
@@ -38,3 +38,7 @@ on {prod-short} upgrade.
               }
             }'
 ----
+
+.Additional resources
+
+* xref:retrieving-default-list-of-images-for-kubernetes-image-puller.adoc[]
