--- a/modules/administration-guide/pages/installing-kubernetes-image-puller.adoc
+++ b/modules/administration-guide/pages/installing-kubernetes-image-puller.adoc
@@ -6,7 +6,7 @@
 [id="installing-{image-puller-name}"]
 = Installing {image-puller-name}
 
-This section contains instructions for installing the {image-puller-name} for different use cases.
+Follow the instructions below to install the {image-puller-name} for different use cases.
 
 == Installing {image-puller-name}
 
