--- a/modules/administration-guide/pages/retrieving-default-list-of-images-for-kubernetes-image-puller.adoc
+++ b/modules/administration-guide/pages/retrieving-default-list-of-images-for-kubernetes-image-puller.adoc
@@ -6,7 +6,7 @@
 [id="retrieving-default-list-of-images-for-kubernetes-image-puller"]
 = Retrieving the default list of images for {image-puller-name}
 
-This article provides instructions on retrieving the default list of images used by {image-puller-name}. This can be helpful for administrators who want to review and configure {image-puller-name-short} to use only a subset of these images in advance.
+Learn how to retrieve the default list of images used by {image-puller-name}. This can be helpful for administrators who want to review and configure {image-puller-name-short} to use only a subset of these images in advance.
 
 
 .Prerequisites
