--- a/modules/overview/examples/snip_che-managing-extensions.adoc
+++ b/modules/overview/examples/snip_che-managing-extensions.adoc
@@ -1,1 +1,1 @@
-More details about managing IDE extensions can be found in link:https://eclipse.dev/che/docs/stable/administration-guide/extensions-for-microsoft-visual-studio-code-open-source/[the official documentation].
+More details about managing IDE extensions are available in link:https://eclipse.dev/che/docs/stable/administration-guide/extensions-for-microsoft-visual-studio-code-open-source/[the official documentation].
