--- a/modules/overview/examples/snip_che-installation-instructions.adoc
+++ b/modules/overview/examples/snip_che-installation-instructions.adoc
@@ -1,1 +1,1 @@
-Installation instructions can be found in the link:https://eclipse.dev/che/docs/stable/administration-guide/installing-che-in-a-restricted-environment/[official documentation].
+Installation instructions are available in the link:https://eclipse.dev/che/docs/stable/administration-guide/installing-che-in-a-restricted-environment/[official documentation].
