--- a/modules/overview/pages/security-best-practices.adoc
+++ b/modules/overview/pages/security-best-practices.adoc
@@ -241,8 +241,8 @@ includes the embedded Open VSX registry
 which contains a limited set of extensions used by Microsoft Visual Studio Code -
 Open Source editor.
 Alternatively, cluster administrators can specify a different plugin registry in the Custom Resource, e.g.
-https://open-vsx.org that contains thousands of extensions,
-or build a custom Open VSX registry.
+https://open-vsx.org that contains thousands of extensions.
+They can also build a custom Open VSX registry.
 include::example$snip_che-managing-extensions.adoc[]
 
 [IMPORTANT]
