feat: Allow to configure 2 gitlab providers simultaneously

--- a/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
@@ -56,3 +56,5 @@ EOF
 ----
 
 . Verify in the output that the Secret is created.
+
+To configure OAuth 2.0 for another Gitlab provider, you have to repeat the steps above and create a second Gitlab OAuth Secret with a different name.
