Add command deploy

--- a/modules/administration-guide/pages/installing-che-on-AWS-EKS.adoc
+++ b/modules/administration-guide/pages/installing-che-on-AWS-EKS.adoc
@@ -98,3 +98,8 @@ spec:
         CHE_OIDC_USERNAME__CLAIM: email
 EOF
 ----
+. Deploy cluster
+[source,shell]
+----
+kubectl apply -f /tmp/che-clsuter.yaml
+----
