--- a/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
+++ b/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
@@ -15,3 +15,4 @@ You can modify {prod-short} behavior by:
 
 * xref:configuring-workspace-target-namespace.adoc[]
 * xref:provisioning-namespaces-in-advance.adoc[]
+* xref:configuring-a-user-namespace.adoc[]
