--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -176,18 +176,11 @@ spec:
 +
 Aside from the previously mentioned `ConfigMap`, `Secret`, and `PersistentVolumeClaim`, `Template` objects can include:
 +
-* `Deployments`
-* `DevWorkspace`
-* `DevWorkspaceTemplate`
-* `Jobs`
 * `LimitRange`
 * `NetworkPolicy`
 * `ResourceQuota`
 * `Role`
 * `RoleBinding`
-* `Route`
-* `Service`
-* `ServiceAccount`
 +
 [source,yaml,subs="+attributes,+quotes"]
 ----
@@ -209,7 +202,7 @@ parameters:
 +
 The `parameters` are optional and define which parameters can be used. Currently, only `PROJECT_NAME` and `PROJECT_ADMIN_USER` are supported. `PROJECT_NAME` is the name of the {prod-short} {namespace}, while `PROJECT_ADMIN_USER` is the {prod-short} user of the {namespace}.
 +
-The {namespace} name in objects is omitted and will be replaced with the user's {namespace} name during synchronization.
+The {namespace} name in objects will be replaced with the user's {namespace} name during synchronization.
 +
 .Replicating {kubernetes} resources to a user namespace:
 ====
