--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -246,7 +246,7 @@ objects:
   subjects:
   - kind: User
     apiGroup: rbac.authorization.k8s.io
-    name: ${PROJECT_ADMIN_USER}
+    name: $\{PROJECT_ADMIN_USER}
 parameters:
 - name: PROJECT_ADMIN_USER
 ----
